<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@id/textView2"
        android:layout_marginLeft="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lunch_settings_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <CheckBox
        android:id="@+id/playMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_music_label"/>
    <Button
        android:id="@+id/settingsSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        android:onClick="SaveSettingsClicked"/>

</LinearLayout>
