<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">

    <TableLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="1"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/name_label"
                android:textColor="#4c0099"/>

            <EditText
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" >
                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/address_label"
                android:textColor="#4c0099"/>

            <EditText
                android:id="@+id/Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/type_label"
                android:textColor="#4c0099"/>

            <RadioGroup android:id="@+id/Type">
                <RadioButton
                    android:text="@string/delivery_label"
                    android:id="@+id/delivery"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#0461ff"/>
                <RadioButton
                    android:text="@string/sitdown_label"
                    android:id="@+id/sitdown"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#00810e"/>
                <RadioButton
                    android:text="@string/takeout_label"
                    android:id="@+id/takeout"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#ca3000"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/note"
                android:textColor="#4c0099"/>

            <EditText
                android:id="@+id/Note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:autofillHints="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_label" />
        <Button
            android:id="@+id/CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label" />

    </TableLayout>

</RelativeLayout>